# testproject

./: .gitignore  CMakeLists.txt  README.md  main.c
drivers/: CMakeLists.txt
drivers/CMSIS/: CMakeLists.txt
drivers/CMSIS/Device/ST/: CMakeLists.txt
drivers/CMSIS/Device/ST/STM32F1xx/: CMakeLists.txt
drivers/STM32F1xx_HAL_Driver/: CMakeLists.txt
drivers/STM32F1xx_HAL_Driver/Src/: CMakeLists.txt
lib/: CMakeLists.txt  adc.c  adc.h  gpio.c  gpio.h  rcc.c  rcc.h  timerhal.c  timerhal.h  usart.c  usart.h
ports/: CMakeLists.txt
ports/stm32f103/: CMakeLists.txt
